main - 957bc48 fix(material-experimental/theming): align fab with M3 spec

--- a/theming/_custom-tokens.scss
+++ b/theming/_custom-tokens.scss
@@ -321,7 +321,7 @@
 @function fab($systems, $exclude-hardcoded) {
   @return ((
     foreground-color: map.get($systems, md-sys-color, on-primary-container),
-    state-layer-color: map.get($systems, md-sys-color, primary-container),
+    state-layer-color: map.get($systems, md-sys-color, on-primary-container),
     ripple-color: mat.private-safe-color-change(
       map.get($systems, md-sys-color, on-primary-container),
       $alpha: map.get($systems, md-sys-state, pressed-state-layer-opacity)
@@ -338,7 +338,7 @@
     primary: (), // Default, no overrides needed.
     secondary: (
       foreground-color: map.get($systems, md-sys-color, on-secondary-container),
-      state-layer-color: map.get($systems, md-sys-color, secondary-container),
+      state-layer-color: map.get($systems, md-sys-color, on-secondary-container),
       ripple-color: mat.private-safe-color-change(
           map.get($systems, md-sys-color, on-secondary-container),
         $alpha: map.get($systems, md-sys-state, pressed-state-layer-opacity)
@@ -346,7 +346,48 @@
     ),
     tertiary: (
       foreground-color: map.get($systems, md-sys-color, on-tertiary-container),
-      state-layer-color: map.get($systems, md-sys-color, tertiary-container),
+      state-layer-color: map.get($systems, md-sys-color, on-tertiary-container),
+      ripple-color: mat.private-safe-color-change(
+          map.get($systems, md-sys-color, on-tertiary-container),
+        $alpha: map.get($systems, md-sys-state, pressed-state-layer-opacity)
+      ),
+    )
+  ));
+}
+
+/// Generates custom tokens for the mat-mini-fab.
+/// @param {Map} $systems The MDC system tokens
+/// @param {Boolean} $exclude-hardcoded Whether to exclude hardcoded token values
+/// @return {Map} A set of custom tokens for the mat-mini-fab
+@function fab-small($systems, $exclude-hardcoded) {
+  @return ((
+    foreground-color: map.get($systems, md-sys-color, on-primary-container),
+    state-layer-color: map.get($systems, md-sys-color, on-primary-container),
+    ripple-color: mat.private-safe-color-change(
+      map.get($systems, md-sys-color, on-primary-container),
+      $alpha: map.get($systems, md-sys-state, pressed-state-layer-opacity)
+    ),
+    hover-state-layer-opacity: map.get($systems, md-sys-state, hover-state-layer-opacity),
+    focus-state-layer-opacity: map.get($systems, md-sys-state, focus-state-layer-opacity),
+    pressed-state-layer-opacity: map.get($systems, md-sys-state, pressed-state-layer-opacity),
+    disabled-state-container-color: mat.private-safe-color-change(
+      map.get($systems, md-sys-color, on-surface), $alpha: 0.12),
+    disabled-state-foreground-color: mat.private-safe-color-change(
+      map.get($systems, md-sys-color, on-surface), $alpha: 0.38),
+  ), (
+    // Color variants
+    primary: (), // Default, no overrides needed.
+    secondary: (
+      foreground-color: map.get($systems, md-sys-color, on-secondary-container),
+      state-layer-color: map.get($systems, md-sys-color, on-secondary-container),
+      ripple-color: mat.private-safe-color-change(
+          map.get($systems, md-sys-color, on-secondary-container),
+        $alpha: map.get($systems, md-sys-state, pressed-state-layer-opacity)
+      ),
+    ),
+    tertiary: (
+      foreground-color: map.get($systems, md-sys-color, on-tertiary-container),
+      state-layer-color: map.get($systems, md-sys-color, on-tertiary-container),
       ripple-color: mat.private-safe-color-change(
           map.get($systems, md-sys-color, on-tertiary-container),
         $alpha: map.get($systems, md-sys-state, pressed-state-layer-opacity)
